fix dapp card whitespace

--- a/src/staking-v3/components/styles/dapps.scss
+++ b/src/staking-v3/components/styles/dapps.scss
@@ -101,6 +101,7 @@
   align-items: center;
   height: 28px;
   span{
+    white-space: nowrap;
     display: flex;
     align-items: center;
     .icon--stakers{
